# NeuralNetwork

./: .gitignore  Cargo.toml  README.md
application/: Cargo.toml
application/src/: main.rs  visualization.rs
application_gpu/: Cargo.toml
application_gpu/src/: main.rs
neural_net/: Cargo.toml
neural_net/benches/: feedforward.rs  train.rs
neural_net/src/: activation.rs  checkpoints.rs  datasets.rs  layers.rs  lib.rs  loss.rs  metadata.rs  neural_net.rs  saving_and_loading.rs  tests.rs  training_data.rs  training_events.rs
neural_net/src/gpu/: gpu_backpropagation.rs  gpu_operations.rs  gpu_tensor.rs  mod.rs
src/: activation.rs  main.rs
