[workspace]
resolver = "2"
members = ["neural_net", "application"]

[workspace.dependencies]
ndarray = {version = "0.16", features = ["serde"]}
num-traits = "0.2"
rand = "0.9"
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
anyhow = "1.0"
bincode = "1"
serde_json = "1"

[workspace.dev-dependencies]
criterion = "0.5.1"

[profile.release]
debug = true
