[workspace]
resolver = "2"
members = ["neural_net", "application", "application_gpu"]

[workspace.dependencies]
ndarray = {version = "0.16", features = ["serde"]}
num-traits = "0.2"
rand = "0.9"
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
anyhow = "1.0"
bincode = "1"
serde_json = "1"
chrono = {version = "0.4", features = ["serde"]}
env_logger = "0.11.8"
plotters = "0.3.7"
cubecl = "0.9.0-pre.3"

[workspace.dev-dependencies]
criterion = "0.5.1"

[profile.release]
debug = true
