[package]
name = "application"
version = "0.1.0"
edition = "2024"

[dependencies]
neural_net = { path = "../neural_net", features = ["loss", "f64"], default-features = false}
ndarray = { workspace = true }
rand = { workspace = true }
num-traits = { workspace = true }
anyhow.workspace = true
env_logger.workspace = true
plotters.workspace = true
log.workspace = true
