[package]
name = "neural_net"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray.workspace = true
rand.workspace = true
num-traits.workspace = true
log.workspace = true
serde.workspace = true
rayon = "1.10.0"
anyhow.workspace = true
bincode.workspace = true
serde_json.workspace = true
chrono.workspace = true
cubecl = "0.9.0-pre.3"
bytemuck = "1.24.0"

[dev-dependencies]
criterion = "0.5.1"
rand_chacha = "0.9.0"

[[bench]]
name = "feedforward"
harness = false

[[bench]]
name = "train"
harness = false

[features]
loss = []
